--- a/genindex.html
+++ b/genindex.html
@@ -43,7 +43,7 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <p class="logo"><a href="index.html">
-              <img class="logo" src="_static/logo.png" alt="Logo"/>
+              <img class="logo" src="_static/logo_131.png" alt="Logo"/>
             </a></p>
 
    
