--- a/user_manual/toolkit.html
+++ b/user_manual/toolkit.html
@@ -51,7 +51,7 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <p class="logo"><a href="../index.html">
-              <img class="logo" src="../_static/logo.png" alt="Logo"/>
+              <img class="logo" src="../_static/logo_131.png" alt="Logo"/>
             </a></p>
   <h3><a href="../index.html">Table Of Contents</a></h3>
   <ul>
