--- a/user_manual/basics.dataformat.html
+++ b/user_manual/basics.dataformat.html
@@ -7,8 +7,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    
-    <title>Data Format &mdash; FreeROI 0.2.0 documentation</title>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-51205611-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <title>Data Format &mdash; FreeROI 0.2.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +27,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.2.0',
+        VERSION:     '0.2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +37,8 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="FreeROI 0.2.0 documentation" href="../index.html" />
+    <link rel="shortcut icon" href="../_static/logo.ico"/>
+    <link rel="top" title="FreeROI 0.2.1 documentation" href="../index.html" />
     <link rel="up" title="User Manual" href="../user_manual.html" />
     <link rel="next" title="Data Viewing" href="basics.dataviewing.html" />
     <link rel="prev" title="Introduction" href="overview.html" /> 
@@ -44,14 +56,14 @@
         <li class="right" >
           <a href="overview.html" title="Introduction"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">FreeROI 0.2.0 documentation</a> &raquo;</li>
+        <li><a href="../index.html">FreeROI 0.2.1 documentation</a> &raquo;</li>
           <li><a href="../user_manual.html" accesskey="U">User Manual</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <p class="logo"><a href="../index.html">
-              <img class="logo" src="../_static/logo_131.png" alt="Logo"/>
+              <img class="logo" src="../_static/logo_200.png" alt="Logo"/>
             </a></p>
   <h4>Previous topic</h4>
   <p class="topless"><a href="overview.html"
@@ -113,7 +125,7 @@ Besides, most operations are both available to both of these two data format.</p
         <li class="right" >
           <a href="overview.html" title="Introduction"
              >previous</a> |</li>
-        <li><a href="../index.html">FreeROI 0.2.0 documentation</a> &raquo;</li>
+        <li><a href="../index.html">FreeROI 0.2.1 documentation</a> &raquo;</li>
           <li><a href="../user_manual.html" >User Manual</a> &raquo;</li> 
       </ul>
     </div>
