--- a/developers/architecture.html
+++ b/developers/architecture.html
@@ -7,8 +7,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    
-    <title>Software Architecture &mdash; FreeROI 0.2.0 documentation</title>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-51205611-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <title>Software Architecture &mdash; FreeROI 0.2.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +27,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.2.0',
+        VERSION:     '0.2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,8 +37,10 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="FreeROI 0.2.0 documentation" href="../index.html" />
+    <link rel="shortcut icon" href="../_static/logo.ico"/>
+    <link rel="top" title="FreeROI 0.2.1 documentation" href="../index.html" />
     <link rel="up" title="Development Manual" href="../devel_manual.html" />
+    <link rel="next" title="ChangeLog" href="../changelog.html" />
     <link rel="prev" title="Developer Guidelines" href="dev_guide.html" /> 
   </head>
   <body>
@@ -38,16 +51,19 @@
           <a href="../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="../changelog.html" title="ChangeLog"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
           <a href="dev_guide.html" title="Developer Guidelines"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">FreeROI 0.2.0 documentation</a> &raquo;</li>
+        <li><a href="../index.html">FreeROI 0.2.1 documentation</a> &raquo;</li>
           <li><a href="../devel_manual.html" accesskey="U">Development Manual</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <p class="logo"><a href="../index.html">
-              <img class="logo" src="../_static/logo_131.png" alt="Logo"/>
+              <img class="logo" src="../_static/logo_200.png" alt="Logo"/>
             </a></p>
   <h3><a href="../index.html">Table Of Contents</a></h3>
   <ul>
@@ -69,6 +85,9 @@
   <h4>Previous topic</h4>
   <p class="topless"><a href="dev_guide.html"
                         title="previous chapter">Developer Guidelines</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="../changelog.html"
+                        title="next chapter">ChangeLog</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/developers/architecture.txt"
@@ -210,9 +229,12 @@ in codes.</p>
           <a href="../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
+          <a href="../changelog.html" title="ChangeLog"
+             >next</a> |</li>
+        <li class="right" >
           <a href="dev_guide.html" title="Developer Guidelines"
              >previous</a> |</li>
-        <li><a href="../index.html">FreeROI 0.2.0 documentation</a> &raquo;</li>
+        <li><a href="../index.html">FreeROI 0.2.1 documentation</a> &raquo;</li>
           <li><a href="../devel_manual.html" >Development Manual</a> &raquo;</li> 
       </ul>
     </div>
