--- a/user_manual/toolkit.html
+++ b/user_manual/toolkit.html
@@ -7,8 +7,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    
-    <title>Image Processing Toolkit &mdash; FreeROI 0.2.0 documentation</title>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-51205611-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <title>Image Processing Toolkit &mdash; FreeROI 0.2.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +27,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.2.0',
+        VERSION:     '0.2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,9 +37,10 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="FreeROI 0.2.0 documentation" href="../index.html" />
+    <link rel="shortcut icon" href="../_static/logo.ico"/>
+    <link rel="top" title="FreeROI 0.2.1 documentation" href="../index.html" />
     <link rel="up" title="User Manual" href="../user_manual.html" />
-    <link rel="next" title="Development Manual" href="../devel_manual.html" />
+    <link rel="next" title="Q&amp;A" href="q_and_a.html" />
     <link rel="prev" title="ROI Generation" href="roianalysis.html" /> 
   </head>
   <body>
@@ -39,19 +51,19 @@
           <a href="../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../devel_manual.html" title="Development Manual"
+          <a href="q_and_a.html" title="Q&amp;A"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="roianalysis.html" title="ROI Generation"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">FreeROI 0.2.0 documentation</a> &raquo;</li>
+        <li><a href="../index.html">FreeROI 0.2.1 documentation</a> &raquo;</li>
           <li><a href="../user_manual.html" accesskey="U">User Manual</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <p class="logo"><a href="../index.html">
-              <img class="logo" src="../_static/logo_131.png" alt="Logo"/>
+              <img class="logo" src="../_static/logo_200.png" alt="Logo"/>
             </a></p>
   <h3><a href="../index.html">Table Of Contents</a></h3>
   <ul>
@@ -69,8 +81,8 @@
   <p class="topless"><a href="roianalysis.html"
                         title="previous chapter">ROI Generation</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../devel_manual.html"
-                        title="next chapter">Development Manual</a></p>
+  <p class="topless"><a href="q_and_a.html"
+                        title="next chapter">Q&amp;A</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/user_manual/toolkit.txt"
@@ -153,11 +165,11 @@ name is specified by users.</p>
 <img alt="../_images/intersect.png" src="../_images/intersect.png" />
 </li>
 <li><p class="first">Local Maxima Detection</p>
-<p>This tool is used for extract local maxima from an image. The local maxima
-could be used for defining ROIs with regular shape.</p>
-<p>To extract the local maxima from an image, a least distance of local maximum
-is needed. If the distance between two local maximum is less than this lower
-bound, the smaller local maxima would be discarded.</p>
+<p>This tool is used for extract local peak/maxima from an image. The local
+peak could be used for defining ROIs with regular shape.</p>
+<p>To extract the local peak from an image, a least distance <em>min_distance</em>
+is needed. Peaks are the local maxima in a region of 2 * <em>min_distance</em> + 1
+(i.e. peaks are separated by at least <em>min_distance</em>).</p>
 <img alt="../_images/local_max.png" src="../_images/local_max.png" />
 </li>
 <li><p class="first">Extract mean time course</p>
@@ -337,12 +349,12 @@ background.</li>
           <a href="../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../devel_manual.html" title="Development Manual"
+          <a href="q_and_a.html" title="Q&amp;A"
              >next</a> |</li>
         <li class="right" >
           <a href="roianalysis.html" title="ROI Generation"
              >previous</a> |</li>
-        <li><a href="../index.html">FreeROI 0.2.0 documentation</a> &raquo;</li>
+        <li><a href="../index.html">FreeROI 0.2.1 documentation</a> &raquo;</li>
           <li><a href="../user_manual.html" >User Manual</a> &raquo;</li> 
       </ul>
     </div>
