--- a/user_manual/basics.dataformat.html
+++ b/user_manual/basics.dataformat.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -19,7 +17,7 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
-    <title>Data Format &mdash; FreeROI 0.2.1 documentation</title>
+    <title>Data Format &mdash; FreeROI 0.2.2 documentation</title>
     
     <link rel="stylesheet" href="../_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -27,7 +25,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.2.1',
+        VERSION:     '0.2.2',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -38,7 +36,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../_static/logo.ico"/>
-    <link rel="top" title="FreeROI 0.2.1 documentation" href="../index.html" />
+    <link rel="top" title="FreeROI 0.2.2 documentation" href="../index.html" />
     <link rel="up" title="User Manual" href="../user_manual.html" />
     <link rel="next" title="Data Viewing" href="basics.dataviewing.html" />
     <link rel="prev" title="Introduction" href="overview.html" /> 
@@ -56,7 +54,7 @@
         <li class="right" >
           <a href="overview.html" title="Introduction"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">FreeROI 0.2.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">FreeROI 0.2.2 documentation</a> &raquo;</li>
           <li><a href="../user_manual.html" accesskey="U">User Manual</a> &raquo;</li> 
       </ul>
     </div>
@@ -125,13 +123,13 @@ Besides, most operations are both available to both of these two data format.</p
         <li class="right" >
           <a href="overview.html" title="Introduction"
              >previous</a> |</li>
-        <li><a href="../index.html">FreeROI 0.2.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">FreeROI 0.2.2 documentation</a> &raquo;</li>
           <li><a href="../user_manual.html" >User Manual</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2012-2014, Neuroinformatic Team in LiuLab from Beijing Normal University.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.2.
     </div>
   </body>
 </html>
